k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: formula-one-fantasy
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
